# contacter

./: CMakeLists.txt  README.md  org.kde.contacter.desktop  org.kde.contacter.json  org.kde.contacter.metainfo.xml
android/: AndroidManifest.xml
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  contacterconfig.kcfg  contacterconfig.kcfgc  main.cpp  resources.qrc
src/contents/ui/: About.qml  main.qml
